--- a/client/src/App.css
+++ b/client/src/App.css
@@ -178,10 +178,12 @@ p {
     text-align: center;
 }
 
-.emailcont {
+.emailcont,
+.send-btn-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    display: none;
 }
 
 .emailcont input {
@@ -208,12 +210,6 @@ p {
     width: 400px;
 }
 
-.forminnercont {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .forminnercont form {
     border: 2px solid var(--bordercolor);
     width: 100%;
@@ -223,4 +219,21 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.send-btn-container button {
+    font-size: 18px;
+    padding: 8px 40px;
+    margin-top: 15px;
+    /* background: var(--main-bg-color); */
+    background: lightgray;
+    border: none;
+    border-radius: 5px;
+    color: #607d8b;
+    cursor: pointer;
+}
+
+.send-btn-container button:hover {
+    background-color: grey;
+    color: darkblue;
 }
